# gz-sim-environment

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  install-nvidia-container-toolkit.sh  launch_simulation.sh  monitor_nav2_cpu.py
experimental_ws/: bridge_cmd_vel.py
root_dir/: .bashrc  .rangerdir  launch_navigation.sh  navigation.rviz  simulation.rviz
ros2_ws/src/vehicle_packages/vehicle_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/vehicle_packages/vehicle_bringup/launch/: multi_robot.launch.py  spawn_robot.launch.py  unirobot.launch.py
ros2_ws/src/vehicle_packages/vehicle_bringup/models/4_wheel_differential/: model_with_2_lidar.erb  small_vehicle_vert_lidar.erb
ros2_ws/src/vehicle_packages/vehicle_bringup/params/: twist_mux.yaml
shell_scripts/: basic_util.sh  colcon.sh  download_install_lttng.sh  env_vars.sh  install_browser.sh  install_gazebo.sh  install_lttng.sh  install_ros2_binary.sh  install_ros2_deb.sh  ros_package_install_essential.sh
tracing_ws/: live_trace.sh  (+3 more)
vehicle_packages/ground_truth_localization/: CMakeLists.txt
vehicle_packages/ground_truth_localization/src/: cmd_vel_republisher.cpp  publish_tf.cpp
vehicle_packages/gz_sim_worlds/: CMakeLists.txt  package.xml
vehicle_packages/gz_sim_worlds/models/Transformers_Age_of_Extinction_Mega_1Step_Bumblebee_Figure/: metadata.pbtxt  model.sdf
vehicle_packages/gz_sim_worlds/models/apollo15_landing_site_1000x1000/: model-1_4.sdf
vehicle_packages/gz_sim_worlds/models/cave_byci_skala_large/: model.config  model.sdf
vehicle_packages/gz_sim_worlds/models/cave_byci_skala_small/: model.sdf
vehicle_packages/gz_sim_worlds/models/cave_world/meshes/: cave_world.mtl
vehicle_packages/gz_sim_worlds/models/city_terrain/: model.sdf
vehicle_packages/gz_sim_worlds/models/cpr_inspection/meshes/: inspection_world.dae
vehicle_packages/gz_sim_worlds/models/foldable_chair/: model.sdf
vehicle_packages/gz_sim_worlds/models/forest/vrc_driving_terrain/: model.sdf
vehicle_packages/gz_sim_worlds/models/fountain/meshes/: fountain.dae
vehicle_packages/gz_sim_worlds/models/marsyard2020_terrain_no_rocks/: model.sdf
vehicle_packages/gz_sim_worlds/models/pilsen_robot_testbed/pilsen_robot_testbed_highres/: model.config  model.sdf
vehicle_packages/gz_sim_worlds/models/pilsen_robot_testbed/pilsen_robot_testbed_lowres_stairs/: model.sdf
vehicle_packages/gz_sim_worlds/models/post_office/meshes/: post_office.dae
vehicle_packages/gz_sim_worlds/models/spectrum_plane/meshes/: spectrum_plane.dae
vehicle_packages/gz_sim_worlds/models/truss_bridge/meshes/: truss_bridge.dae
vehicle_packages/gz_sim_worlds/worlds/: cave_world.sdf  clearpath_playpen.sdf  indoor.sdf  inspection.sdf  marsyard2020.sdf  marsyard2020_walls.sdf  marsyard2022.sdf  playpen_featureless.sdf  playpen_featureless_diag.sdf  tunnel.sdf
(+58 files in other folders)
